# cs2_meeting_points

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  config.toml  cs2_nav.pyi  index.html  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yaml  deploy.yaml  generate-plots.yaml  publish.yml  rust.yaml  webpage.yaml
hashes/: ar_baggage.txt  ar_pool_day.txt  ar_shoots.txt  ar_shoots_night.txt  cs_agency.txt  cs_alpine.txt  cs_italy.txt  cs_office.txt  de_ancient.txt  de_anubis.txt  de_basalt.txt  de_brewery.txt  de_cache.txt  de_dogtown.txt  de_dust2.txt  de_edin.txt  de_golden.txt  de_grail.txt  de_inferno.txt  de_jura.txt  de_mirage.txt  de_nuke.txt  de_overpass.txt  de_palacio.txt  de_palais.txt  de_poseidon.txt  de_rooftop.txt  de_sanctum.txt  de_stronghold.txt  de_train.txt  de_transit.txt  de_vertigo.txt  de_warden.txt  de_whistle.txt
scripts/: check_regeneration_needed.py  generate_gif.sh  last_run_time.txt  plot_spread.py  update_webpage_data.py
src/: collisions.rs  constants.rs  lib.rs  main.rs  nav.rs  position.rs  spread.rs  utils.rs  visibility.rs
tests/: README.md  ci_integration_test.rs  ci_style_integration_test.rs  cli_integration_tests.rs  integration.rs  integration_tests.rs  mypy-stubtest-allowlist.txt  test_bindings.py
tests/data/: de_whistle.json  de_whistle.nav  lobby_mapveto.tri
tests/references/input/: generate.py
tests/references/input/maps/: map-data.json
tests/references/input/nav/: test_good.json
tests/references/input/spawns/: test_good.json
tests/references/input/tri/: test_good.tri
