[package]
name = "cs2-nav"
version = "0.3.18"
edition = "2024"
description = "Package to produce CS2 meeting point plots."
license = "MIT"
authors = ["Jan-Eric <janericnitschke@gmail.com"]
readme = "README.md"
repository = "https://github.com/JanEricNitschke/cs2_meeting_points"
keywords = ["CS2", "visualization"]
categories = ["visualization"]
include = [
    "/src",
    "/tests",
    "/Cargo.toml",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/py.typed",
    "/*.pyi",
]

[dependencies]
bincode     = "=3.0.0"
geo         = "0.32.0"
itertools   = "0.14.0"
petgraph    = "0.8.3"
rayon       = "1.11.0"
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0.145"
simple-tqdm = { version = "0.2.0", features = ["rayon"] }
rustc-hash  = "2.1.1"
sha2        = "0.10.9"
clap        = { version = "4.5.53", features = ["derive"] }
pyo3        = { version = "0.27.2", features = ["extension-module"] }
byteorder   = "1.5.0"

[target.'cfg(all(not(target_env = "msvc"), not(target_arch = "wasm32")))'.dependencies]
tikv-jemallocator = "0.6"


[lib]
name       = "cs2_nav"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cs2_meeting_points"
path = "src/main.rs"

[profile.release]
lto           = "fat"
codegen-units = 1
panic         = "abort"

[dev-dependencies]
image = "0.25.9"
